# agentic-ai-funnel-audit

./: .gitignore  Dockerfile  GCP_DEPLOYMENT.md  README.md  README_BUSINESS_PLAN.md  TEST_CASES.md  notes.txt  pyproject.toml
demo_kb/data/: customer-data-maturity.md
demo_kb/governance/: ai-risk-policy.md
demo_kb/market/: ai-service-trends.md
demo_kb/strategy/: fy26-strategy.md
demo_kb/technology/: platform-constraints.md
demo_kb/templates/: idea-intake-template.md
docs/: MULTI_AGENT_RAG_DESIGN.md
knowledge_snapshots/: README.md
knowledge_snapshots/market/: new-trend-snapshot.json
src/agentic_ai_funnel_audit/: __init__.py  agents.py  api.py  batch_jobs.py  cli.py  connectors.py  demo.py  durable_jobs.py  governance.py  hybrid_retrieval.py  knowledge_base.py  knowledge_ingestion.py  mcp_server.py  modeling.py  observability.py  outcomes.py  pipeline.py  pubsub_worker.py  source_adapters.py  storage.py  tool_gateway.py
src/agentic_ai_funnel_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agentic_ai_funnel_audit/ui/: app.py
src/agentic_ai_funnel_audit/ui/templates/: base.html  dashboard.html  detail.html  intake.html  knowledge_base.html
terraform/: main.tf  terraform.tfvars.example  variables.tf
tests/: test_api.py  test_audit_pipeline.py  test_governance.py  test_ui_import.py
ui/: app.py
ui/templates/: base.html  detail.html  intake.html
